--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,14 @@
 <resources>
     <string name="app_name">DataBaseRSS</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="w_car_model">Car model must be entered</string>
+    <string name="w_car_brand">Car brand must be entered</string>
+    <string name="w_car_year">Car year must be entered</string>
+    <string name="w_detele_car">Car was deleted</string>
+    <string name="model">Model:</string>
+    <string name="brand">Brand:</string>
+    <string name="year">Year:</string>
+    <string name="cursor">Cursor</string>
+    <string name="room">Room</string>
+    <string name="add">Add</string>
 </resources>
